# Taskr

./: .gitignore  README.md
Backend/: .env.example  .gitignore  BUDGET.md  NEXT.md  README.md  openapi.json  pyproject.toml  test_api.sh
Backend/app/: main.py  mapping.py  repository.py  runner.py
Backend/app/data/: repository.py  schema.sql
Backend/app/endpoint/: bindings.py  builders.py  deps.py  models.py  models_bindings.py  node_states.py  runs.py
Backend/app/errors/: __init__.py  base.py  binding.py  data.py  flow.py  handlers.py  integration.py  logic.py
Backend/app/flow/: endpoints.py  models.py  seed.py
Backend/app/integrations/: fake.py
Backend/app/logic/: mapping.py  runner.py
Backend/app/logic/integrations/: api.py  fake.py  hermes.py  result.py  stripe.py
Backend/app/main/: __init__.py  __main__.py  app.py  run.py
Backend/tests/: test_api_integration.py  test_binding_crud.py  test_fake_image_provider.py  test_fake_image_renderer.py  test_file_api_server.py  test_fizzbuzz_echo_flow.py  test_flow_crud.py  test_flow_version_run_creation.py  test_full_process.py  test_hermes_runs_integration.py  test_ping_pong_flow.py  test_product_image_prompt_flow.py  test_run_control.py  test_run_lifecycle.py  test_runner_engine.py  test_stripe_budget_demo.py  test_stripe_integration.py  test_vertical_slice.py
Backend/tools/: fake_image_provider.py  fake_image_renderer.py  file_api_server.py  run_demo_wrapper.sh  run_stripe_budget_demo.sh  seed_ping_pong.py  seed_stripe_budget_demo.py
Frontend/: .env.example  README.md  components.json  eslint.config.js  (+7 more)
(+75 files in other folders)
